java version, Assertion and webtable